--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,24 @@
 {
   "short_name": "MyApp",
-  "name": "My Progressive Web App",
-  "description": "An example of a Progressive Web App with offline support",
+  "name": "My React App",
+  "description": "An amazing React app that works offline.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src" : "maskable_icon.png",
-      "size" : "196 * 196",
-      "type" : "image/png"
-
-    },
-    {
-      "src": "192.png",
+      "src": "/Logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "512.png",
+      "src": "/Logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
     }
