--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.2",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
