--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,13 @@
 {
-  "short_name": "MyApp",
-  "name": "My React App",
-  "description": "An amazing React app that works offline.",
+  "name": "Queue app",
+  "short_name": "Queue",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "description": "Description of your app",
   "icons": [
     {
-      "src": "/Logo192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/Logo512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon.ico",
+      "src": "/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
